test/tests/errors/error-array-bounds-not-int2.sm
// true
// false
// false
/**/
/**/

program {
    array x[1:1.0]: int;
}